--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   "dependencies": {
     "axios": "~0.17.1",
     "bootstrap-vue": "~2.0.0-rc.1",
+    "dexie": "^2.0.2",
+    "gsap": "^1.20.4",
     "vue": "~2.5.13",
     "vue-class-component": "~6.1.2",
+    "vue-draggable-resizable": "^1.7.1",
     "vue-property-decorator": "~6.0.0",
     "vue-router": "~3.0.1",
+    "vue-shortkey": "^3.1.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -44,7 +48,7 @@
     "bootstrap": "~4.0.0",
     "chai": "~4.1.2",
     "compression-webpack-plugin": "~1.1.6",
-    "copy-webpack-plugin": "~4.3.1",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "~5.1.3",
     "css-loader": "~0.28.9",
     "cssnano": "~3.10.0",
