--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   "dependencies": {
     "axios": "~0.17.1",
     "bootstrap-vue": "~2.0.0-rc.1",
+    "brace": "^0.11.1",
     "dexie": "^2.0.2",
     "gsap": "^1.20.4",
+    "json-beautify": "^1.0.1",
+    "randomstring": "^1.1.5",
     "serviceworker-webpack-plugin": "^0.2.3",
     "vue": "~2.5.13",
     "vue-class-component": "~6.1.2",
